--- a/exemplo/public/index.html
+++ b/exemplo/public/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>MyLibrary</title>
+    <style>
+      html,
+      body,
+      #root {
+        height: 100%;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
